# juce_psytrancer

./: .gitignore  CHANGE_LIST.md  CMakeLists.txt  README.md
Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SequencerModel.h
examples/Audio/: AudioWorkgroupDemo.h
examples/CMake/AudioPlugin/: CMakeLists.txt
examples/CMake/ConsoleApp/: CMakeLists.txt
examples/CMake/GuiApp/: CMakeLists.txt
examples/DemoRunner/: CMakeLists.txt  DemoRunner.jucer
examples/DemoRunner/JuceLibraryCode/: JuceHeader.h  include_juce_gui_basics_4.cpp
examples/DemoRunner/Source/: Main.cpp
examples/GUI/: AccessibilityDemo.h  AnimationAppDemo.h  AnimationEasingDemo.h  AnimatorsDemo.h  CodeEditorDemo.h  ComponentDemo.h  ComponentDiagnosticsDemo.h  ComponentTransformsDemo.h  FontFeaturesDemo.h  FontsDemo.h  GraphicsDemo.h  LookAndFeelDemo.h  WebBrowserDemo.h  WidgetsDemo.h  WindowsDemo.h
examples/Plugins/: ARAPluginDemo.h  HostPluginDemo.h  ReaperEmbeddedViewPluginDemo.h  SamplerPluginDemo.h
examples/Utilities/: InAppPurchasesDemo.h  PushNotificationsDemo.h  SystemInfoDemo.h
extras/AudioPerformanceTest/: CMakeLists.txt
extras/AudioPerformanceTest/JuceLibraryCode/: include_juce_gui_basics_5.cpp
extras/AudioPluginHost/: AudioPluginHost.jucer  CMakeLists.txt
extras/AudioPluginHost/Source/: HostStartup.cpp
extras/BinaryBuilder/: CMakeLists.txt
extras/NetworkGraphicsDemo/: CMakeLists.txt
extras/NetworkGraphicsDemo/Source/: ClientComponent.h  SharedCanvas.h
extras/Projucer/: CMakeLists.txt  Projucer.jucer
extras/Projucer/JuceLibraryCode/: JuceHeader.h
extras/UnitTestRunner/: CMakeLists.txt
extras/UnitTestRunner/JuceLibraryCode/: include_juce_gui_basics_2.cpp
extras/UnitTestRunner/Source/: Main.cpp
extras/WindowsDLL/JuceLibraryCode/: include_juce_gui_basics_3.cpp
factory/: 16 beat.psytrancerpreset  4 beat.psytrancerpreset  8 beat.psytrancerpreset  Bounce_001.psytrancerpreset  Bounce_011.psytrancerpreset  Gallop_001.psytrancerpreset  Gallop_002.psytrancerpreset  Gallop_003.psytrancerpreset  Gallop_011.psytrancerpreset  Goa_001.psytrancerpreset  Goa_001_64.psytrancerpreset  Goa_011_32.psytrancerpreset  Offbeat_001.psytrancerpreset  Psy_001.psytrancerpreset  Psy_001_64.psytrancerpreset  Psy_010.psytrancerpreset  Rolling_001.psytrancerpreset  Rolling_020.psytrancerpreset  Rolling_030.psytrancerpreset  Rolling_041.psytrancerpreset  Rolling_042.psytrancerpreset  Rolling_043.psytrancerpreset  Rolling_044.psytrancerpreset  Trance_001.psytrancerpreset
modules/juce_analytics/: juce_analytics.h
modules/juce_animation/: juce_animation.h
modules/juce_audio_basics/: juce_audio_basics.cpp  juce_audio_basics.h
modules/juce_audio_basics/audio_play_head/: juce_AudioPlayHead.cpp  juce_AudioPlayHead.h
modules/juce_audio_basics/midi/: juce_MidiMessage.cpp  juce_MidiMessage.h
modules/juce_audio_basics/mpe/: juce_MPEInstrument.cpp  juce_MPEUtils.cpp  juce_MPEZoneLayout.cpp  juce_MPEZoneLayout.h
modules/juce_audio_basics/utilities/: juce_Interpolators.cpp
modules/juce_audio_devices/: juce_audio_devices.cpp  juce_audio_devices.h
modules/juce_audio_devices/audio_io/: juce_AudioDeviceManager.cpp
modules/juce_audio_devices/midi_io/: juce_MidiDevices.cpp  juce_MidiDevices.h  juce_ScheduledEventThread.h  juce_WaitFreeListeners.cpp  juce_WaitFreeListeners.h
modules/juce_audio_devices/native/: juce_ASIO_windows.cpp  juce_Audio_ios.cpp  juce_CoreAudio_mac.cpp  juce_CoreMidi_mac.mm  juce_Midi_linux.cpp  juce_Midi_windows.cpp  juce_WASAPI_windows.cpp
modules/juce_audio_formats/: juce_audio_formats.h
modules/juce_audio_plugin_client/: juce_audio_plugin_client.h  juce_audio_plugin_client_AAX.cpp  juce_audio_plugin_client_ARA.cpp  juce_audio_plugin_client_AU_1.mm  juce_audio_plugin_client_AU_2.mm  juce_audio_plugin_client_AUv3.mm  juce_audio_plugin_client_LV2.cpp  juce_audio_plugin_client_Unity.cpp  juce_audio_plugin_client_VST2.cpp  juce_audio_plugin_client_VST3.cpp
modules/juce_audio_plugin_client/Standalone/: juce_StandaloneFilterWindow.h
modules/juce_audio_plugin_client/VST3/: juce_VST3ManifestHelper.cpp
modules/juce_audio_plugin_client/detail/: juce_CreatePluginFilter.h  juce_IncludeSystemHeaders.h  juce_PluginScaleFactorUtilities.h
modules/juce_audio_processors/: juce_audio_processors.h
modules/juce_audio_processors/format_types/: juce_LV2PluginFormat.cpp  juce_VST3PluginFormat.cpp  juce_VSTPluginFormat.cpp
modules/juce_audio_processors/processors/: juce_AudioProcessorEditor.cpp  juce_AudioProcessorEditor.h
modules/juce_audio_processors/scanning/: juce_PluginListComponent.cpp  juce_PluginListComponent.h
modules/juce_audio_processors/utilities/: juce_PluginHostType.cpp  juce_PluginHostType.h
modules/juce_audio_processors_headless/: juce_audio_processors_headless.h
modules/juce_audio_processors_headless/format_types/: juce_ARAHosting.cpp  juce_AudioUnitPluginFormatImpl.h  juce_LADSPAPluginFormatHeadless.cpp  (+10 more)
modules/juce_audio_utils/: juce_audio_utils.h
modules/juce_box2d/: juce_box2d.h
modules/juce_core/: juce_core.cpp  juce_core.h
modules/juce_cryptography/: juce_cryptography.h
modules/juce_data_structures/: juce_data_structures.h
modules/juce_dsp/: juce_dsp.h
modules/juce_events/: juce_events.h
modules/juce_graphics/: juce_graphics.cpp  juce_graphics.h
modules/juce_gui_basics/: juce_gui_basics.cpp  juce_gui_basics.h  juce_gui_basics_2.cpp  juce_gui_basics_3.cpp  juce_gui_basics_4.cpp  juce_gui_basics_5.cpp
modules/juce_gui_extra/: juce_gui_extra.cpp  juce_gui_extra.h
modules/juce_javascript/: juce_javascript.h
modules/juce_midi_ci/: juce_midi_ci.cpp  juce_midi_ci.h
modules/juce_opengl/: juce_opengl.cpp  juce_opengl.h
modules/juce_osc/: juce_osc.h
modules/juce_product_unlocking/: juce_product_unlocking.cpp  juce_product_unlocking.h
modules/juce_video/: juce_video.h
(+252 files in other folders)
